2005-12-30  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (gphotofs_readdir) (gphotofs_getattr).
	Set the uid and gid of files to match those of the
	process. This is cosmetic as real access control is
	provided by the allow_other or allow_root options.

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

        * configure.ac
        * Makefile.am
        * NEWS
        * README: 0.1 Release

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (gphotofs_unlink). Test the result
	of the delete operation correctly.

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: Lots of stuff.
	- (struct OpenFile) (freeOpenFile) (gphotofs_open)
	  (gphotofs_release). Add a count for open files so
	  that they aren't closed too early.
	- (gpresultToErrno). Map libgphoto2 errors to errnos,
	  or at least try to. Prevents things going off the
	  deepend if there is an error.
        - (gphotofs_getattr). Don't go into an infinite loop
          if called for a non-existent file.
        - (gphotofs_readdir). Set the block count for files.
          This allows du to report a meaningful result.

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

	A autogen.sh
	* configure.ac: Bump version to 0.0.99 for cvs.
	Checking in to gphoto cvs.

2005-12-28  Philip Langdale  <philipl@mail.utexas.edu>

	* Initial 0.0 Release.